矩阵：模型M、观察V、投影P

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set( SRCES
 	"Lesson01-glfw"      # 01-使用 glfw 建立OpenGL窗口
 	"Lesson02-App"       # 02-封装窗口
     "Lesson03-texture2D" # 03-使用2D纹理
+    "Lesson04-mvp"       # 04-矩阵：模型M、观察V、投影P 
 )
 
 set(GLAD "${CMAKE_CURRENT_SOURCE_DIR}/deps/include/glad/glad.c")
@@ -19,7 +20,6 @@ file(COPY ${Textures} DESTINATION textures/)
 
 
 foreach(Src ${SRCES} )	
-
     message(${Src})
     file(GLOB SrcFile  "src/${Src}/*.h"  "src/${Src}/*.cpp" ${GLAD})
     add_executable (${Src}  ${SrcFile} )
