--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set( SRCES
 	"Lesson02-App"       # 02-封装窗口
     "Lesson03-texture2D" # 03-使用2D纹理
     "Lesson04-mvp"       # 04-矩阵：模型M、观察V、投影P 
+    "Lesson05-camera"    # 05-摄像机 
 )
 
 set(GLAD "${CMAKE_CURRENT_SOURCE_DIR}/deps/include/glad/glad.c")
