--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ set( SRC_DIRES
     "Lesson07-VertexBuffer" # 07-顶点缓冲区 
     "Lesson08-FrameBuffer"  # 08-帧缓冲 
     "Lesson09-Alphablend"   # 09-混合
+    "Lesson10-Model"        # 10-模型
 )
 
 # glad文件
