Lesson18-Billboard 布告板

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ set( SRC_DIRES
     "Lesson15-Culling"      # 15-渲染视锥体内模型
     "Lesson16-Node"         # 16-场景节点
     "Lesson17-Terrain"      # 17-灰度图地形
+    "Lesson18-Billboard"    # 18-布告板技术
     
 )
 
