Lesson21-Lighting1  光照立方体

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,8 @@ set( SRC_DIRES
     "Lesson16-Node"         # 16-场景节点
     "Lesson17-Terrain"      # 17-灰度图地形
     "Lesson18-Billboard"    # 18-布告板技术
-    "Lesson19-Lighting"     # 19-灯光照明
+    "Lesson19-Lighting"     # 19-物体颜色  基础色 * 灯光
+    "Lesson20-Lighting1"    # 20-基础光照 
     
 )
 
